# opensearch-docs-search

./: README.md  pyproject.toml
skill/: SKILL.md
src/opensearch_docs_mcp/: server.py
src/opensearch_docs_search/: __init__.py  __main__.py  cli.py  core.py  server.py
