[project]
name = "opensearch-docs-search"
version = "0.2.0"
description = "Search OpenSearch documentation, blogs, and forums (MCP server + CLI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "enomott" }]
keywords = ["mcp", "opensearch", "documentation", "search", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
opensearch-docs-search = "opensearch_docs_search:main"
opensearch-doc-search = "opensearch_docs_search.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_docs_search"]

[tool.hatch.build.targets.sdist]
include = ["src/opensearch_docs_search"]
